--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
            <p style="text-align: justify;color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">Tu apoyo es fundamental para llevar esta hermosa lengua a más personas. Pronto tendrás la oportunidad de formar parte de esta iniciativa educativa y cultural. Juntos, hagamos del quechua un legado vivo y vibrante.</p>
           <div align="center" class="hero_btn-continer">
             
-            <a href="../fanadesh-html/alpaquitaypr.apk" class="call_to-btn btn_white-border" style="text-align: center;color: #000000;font-family: 'Comic Sans MS', cursive; " download>
+            <a href="./alpaquitaypr.apk" class="call_to-btn btn_white-border" style="text-align: center;color: #000000;font-family: 'Comic Sans MS', cursive; " download>
               DESCARGAR - ANDROID
             </a>
-            <a href="../fanadesh-html/alpaquitaypr.exe" class="call_to-btn btn_white-border" style="text-align: center;color: #000000;font-family: 'Comic Sans MS', cursive; " download>
+            <a href="./alpaquitaypr.exe" class="call_to-btn btn_white-border" style="text-align: center;color: #000000;font-family: 'Comic Sans MS', cursive; " download>
               DESCARGAR - PC
             </a>
           </div>
