--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <p
                     style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
 
-                    ¡Nos complace anunciar el lanzamiento de la primera versión
+                    ¡Nos complace anunciar el lanzamiento de la primera versión potenciada con IA
                     de nuestra aplicación para aprender quechua!</p>
 
                 </div>
