--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span
-                style="color: #000000;font-family: 'Comic Sans MS', cursive;">
+                style="color: #000000;font-family: 'Comic Sans MS';">
                 <img src="images/gatonormal.png" alt
                   style="width: 7%;text-align: center, ">
                 Mishisimi
@@ -55,7 +55,7 @@
         <div style="margin: 5px;">
 
           <h1
-            style="color: #3e1f00; border-radius: 40px; text-align: center;font-family: 'Comic Sans MS', cursive; ">
+            style="color: #3e1f00; border-radius: 40px; text-align: center;font-family: 'Comic Sans MS'; ">
             Descubre el Encanto del Quechua: Aprende de Forma Divertida
           </h1>
           <h1>
@@ -68,7 +68,7 @@
             <div class="hero_detail-box">
 
               <p
-                style="text-align: justify;color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
+                style="text-align: justify;color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS';">
                 Sumérgete en la riqueza cultural del Quechua con nuestra
                 aplicación, creada con pasión y dedicación para guiarte en el
                 aprendizaje de este idioma ancestral. Nuestra misión es
@@ -89,11 +89,11 @@
                 </div>
                 <div class="derecha">
                   <h2
-                    style="color: #000000; background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
+                    style="color: #000000; background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS';">
                     Experiencia
                     intuitiva</h2>
                   <p
-                    style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
+                    style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS';">
                     Disfruta de una experiencia intuitiva y amigable que
                     simplifica tu aprendizaje, adaptándose a tu nivel progreso.
                   </p>
@@ -106,11 +106,11 @@
                 </div>
                 <div class="derecha2">
                   <h2
-                    style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
+                    style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS';">
                     Noticias
                     del aplicativo</h2>
                   <p
-                    style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
+                    style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS';">
 
                     ¡Nos complace anunciar el lanzamiento de la primera versión potenciada con IA
                     de nuestra aplicación para aprender quechua!</p>
@@ -124,17 +124,17 @@
               </div>
               <div class="derecha2">
                 <h2
-                  style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
+                  style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS';">
                   Proximos lanzamientos</h2>
                 <p
-                  style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
+                  style="color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS';">
 
                   ¡Próximamente en la Play Store y nuestra web: la primera versión de nuestra aplicación para aprender quechua!</p>
 
               </div>
             </div>
               <p
-                style="text-align: justify;color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS', cursive;">
+                style="text-align: justify;color: #000000;background-color: rgba(255, 255, 255, 0.7);padding: 8px;border-radius: 10px;font-family: 'Comic Sans MS';">
                 Tu apoyo es crucial para difundir la belleza del quechua a más
                 personas. Ahora tienes la oportunidad de unirte a esta
                 iniciativa educativa y cultural. Descarga nuestra aplicación
@@ -160,7 +160,7 @@
 
           <!-- footer section -->
           <section class="container-fluid footer_section">
-            <p style="color: #000000;font-family: 'Comic Sans MS', cursive;">
+            <p style="color: #000000;font-family: 'Comic Sans MS';">
               Copyright &copy; UNHEVAL
               <a href="  ">- INGIENERIA DE SISTEMAS</a>
             </p>
